api-server/k8s/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-api-dp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ticket-api
  template:
    metadata:
      labels:
        app: ticket-api
    spec:
      containers:
        - name: ticket-api
          image: yisakh/ticket-api
          ports:
            - containerPort: 8080
