api-server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket-api-svc
spec:
  type: ClusterIP
  selector:
    app: ticket-api
  ports:
    - port: 8080
      targetPort: 8080
